# platform

./: .gitignore  Readme.md  docker-compose.yml  known_issues  main.tf
arch/: MVP_architecture.drawio
integrations/ssp_aws_iam/: lambda_function.py  ssp_policy.json
leak_engines/: le_github.drawio
leak_engines/charts/github_consumer/: Chart.yaml  values.yaml
leak_engines/charts/github_consumer/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  serviceaccount.yaml
leak_engines/charts/github_producer/: Chart.yaml  encrypt_values.sh  values.enc.yaml  values.yaml
leak_engines/charts/github_producer/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  (+1 more)
leak_engines/git/: Dockerfile  cli.py  git.py  producer.md  pyproject.toml
leak_engines/git/git_le/: __main__.py
leak_engines/git/git_le/Commands/: __init__.py
leak_engines/git/git_le/Commands/Consumer/: MQEventHandler.py  __init__.py  consumer_wrapper.py  mq.py
leak_engines/git/git_le/Commands/Producer/: __init__.py
leak_engines/git/git_le_cli/: __main__.py
leak_engines/git/git_le_cli/Commands/: __init__.py
leak_engines/git/git_le_cli/Commands/Consumer/: MQEventHandler.py  __init__.py  consumer_wrapper.py  mq.py
leak_engines/git/git_le_cli/Commands/Producer/: __init__.py
leak_engines/git/git_le_cli/Commands/Producer/Sources/: github.py
leak_engines/git/tests/: config.example.yaml  consumer.yaml
leak_engines/th/: main.py
leak_engines/th/th_github/: producer.py
pub_scraper/: main.py
pub_scraper/scrape_github/: scrape_github.py
(+9 files in other folders)
