[tool.poetry]
name = "git"
version = "0.1.0"
description = "Git leak engine to detect leaked secrets from public git repositories."
authors = ["ponkio <ponkio@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
PyYAML = "^6.0"
pika = "^1.3.0"
pymongo = "^4.2.0"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git_le = "git_le.__main__:main"
